application/kustomize/own-your-stack/overlays/production/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: own-your-stack
spec:
  selector:
    matchLabels:
      app: own-your-stack
  template:
    spec:
      containers:
        - image: glendmaatita/own-your-stack:v1.0.1
          name: own-your-stack
---
