application/kustomize/own-your-stack/overlays/production/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: own-your-stack
  annotations:
    kubernetes.io/ingress.class: public
spec:
  ingressClassName: public
  rules:
    - host: own-your-stack-prod.bootcamp.onxp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: own-your-stack
                port:
                  number: 80
  tls:
    - hosts:
        - own-your-stack-prod.bootcamp.onxp.net
      secretName: tls-secret-bootcamp-own-your-stack
---
