application/kustomize/own-your-stack/overlays/production/manifests.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: own-your-stack
spec:
  selector:
    matchLabels:
      app: own-your-stack
  template:
    spec:
      containers:
        - image: glendmaatita/own-your-stack:v1.0.1
          name: own-your-stack
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: own-your-stack
spec:
  ingressClassName: public
  rules:
    - host: own-your-stack-prod.bootcamp.onxp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: own-your-stack
                port:
                  number: 80
  tls:
    - hosts:
        - own-your-stack-prod.bootcamp.onxp.net
      secretName: tls-secret-bootcamp-own-your-stack
---
